[tool.poetry]
name = "resp3"
version = "0.1.0"
description = "A python implementation of RESP3."
authors = ["laixintao <laixintaoo@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
